--- a/src/Makefile
+++ b/src/Makefile
@@ -2,11 +2,13 @@ plan:
 	dtrace -h -s plan_probes.d
 	cc -c plan_manip.c
 	cc -c plan_main.c
+	cc -c plan_atomic.c
 	dtrace -G -32 -s plan_probes.d plan_manip.o plan_main.o
-	cc -o plan plan_main.o plan_manip.o plan_probes.o -lumem -ldtrace
+	cc -o plan plan_main.o plan_manip.o plan_atomic.o plan_probes.o -lumem -ldtrace
 
 clean:
 	rm plan_main.o
 	rm plan_manip.o
 	rm plan_probes.o
+	rm plan_atomic.o
 	rm plan
