--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,10 @@
 plan:
 	dtrace -h -s plan_probes.d
-	cc -c plan_manip.c
-	cc -c plan_main.c
-	cc -c plan_atomic.c
+	gcc -c plan_manip.c
+	gcc -c plan_main.c
+	gcc -c plan_atomic.c
 	dtrace -G -32 -s plan_probes.d plan_manip.o plan_main.o plan_atomic.o
-	cc -o plan plan_main.o plan_manip.o plan_atomic.o plan_probes.o -lumem -ldtrace
+	gcc -o plan plan_main.o plan_manip.o plan_atomic.o plan_probes.o -lumem -ldtrace
 
 clean:
 	rm plan_main.o
